--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "png-to-pdf-converter",
+  "name": "image-to-pdf-converter",
   "private": true,
   "version": "0.0.0",
   "type": "module",
